@@ -527,6 +527,25 @@ class FormHelperTest < Test::Unit::TestCase
     assert_dom_equal expected, _erbout
 
   end
+  
+  def test_default_form_builder_no_instance_variable
+    post = @post
+    @post = nil
+    
+    _erbout = '' 
+    form_for(:post, post) do |f|
+       _erbout.concat f.error_message_on('author_name')
+       _erbout.concat f.error_messages
+    end    
+    
+    expected = %(<form action='http://www.example.com' method='post'>) + 
+               %(<div class='formError'>can't be empty</div>) + 
+               %(<div class="errorExplanation" id="errorExplanation"><h2>1 error prohibited this post from being saved</h2><p>There were problems with the following fields:</p><ul><li>Author name can't be empty</li></ul></div>) +
+               %(</form>)
+    
+    assert_dom_equal expected, _erbout
+    
+  end
 
   # Perhaps this test should be moved to prototype helper tests.
   def test_remote_form_for_with_labelled_builder
