@@ -1,5 +1,7 @@
 *SVN*
 
+* error_messages_for and friends also work with local variables.  #9699 [Frederick Cheung]
+
 * Fix url_for, redirect_to, etc. with :controller => :symbol instead of 'string'.  #8562, #9525 [Justin Lynn, Tarmo Tänav, shoe]
 
 * Use #require_library_or_gem to load the memcache library for the MemCache session and fragment cache stores.  Closes #8662. [Rick]
